<resources>

    <!-- Cose di dibiase -->

    <string name="app_name">PadelMarche</string>
    <string name="email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="registrati">Registrati</string>
    <string name="login_failed">"Login fallito"</string>
    <string name="nav_header_title">Padel Marche</string>
    <string name="nav_header_subtitle">La casa del Padel</string>
    <string name="action_settings">Settings</string>
    <string name="spinnerS">Sesso</string>
    <string-array name="sesso_array">
        <item>Uomo</item>
        <item>Donna</item>
        <item>Altro</item>
    </string-array>
    <string name="cellulare">Cellulare</string>


    <string name="nome">Nome</string>
    <string name="cognome">Cognome</string>
    <string name="emailSignup">Email</string>
    <string name="compleanno">Data di nascita</string>
    <string name="course">Corso di laurea</string>
    <string name="Back">Annulla</string>
    <string name="dataformat">GG-MM-AAAA</string>
    <string name="DescriptionFoto">foto profilo</string>
    <string name="changePhoto">Cambia la tua foto profilo</string>
    <string name="modifica">Modifica</string>
    <string name="idclasse">idClasse</string>
    <string name="salva">Salva</string>
    <string name="eliminafoto">Elimina la foto</string>
    <string name="logout">Logout</string>
    <string name="conferma">Conferma</string>

    <string name="name">Nome</string>


    <string name="spinnerP">Seleziona la provincia </string>


    <!-- Cose di Cork -->


    <string name="add_result">Add Result</string>
    <string name="menu_cancel">Cancel</string>
    <string name="menu_results">Results</string>
    <string name="menu_members">Members</string>
    <string name="menu_contact">Contact</string>
    <string name="fill_in_all_fields">Please fill in all fields</string>
    <string name="update_result">Update Result</string>
    <string name="update_member">Update Member</string>
    <string name="select_a_member">Select member:</string>
    <string name="add_result_players_label">Players:</string>
    <string name="add_result_score_label">Score:</string>
    <string name="nav_header_desc">Menu</string>
    <string name="select_experience">Select experience:</string>
    <string name="results_not_found">No Results Yet...</string>
    <string name="member_edit_denied">You cannot edit another members details!</string>
    <string name="member_delete_denied">You cannot delete another member!</string>
    <string name="confirm_member_delete">Are you sure you want to delete this member?</string>
    <string name="add_result_date_label">Date:</string>
    <string name="change_date">Change date</string>

    <!-- START Firebase Resources-->


    <string name="menu_editResult">Edit result</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_prenotazioni">Prenotazioni</string>
    <string name="title_amici">Amici</string>
    <string name="sharedPreferences">DatiUtentePadel</string>
    <string name="le_tue_prenotazioni">Le Tue Prenotazioni</string>
    <string name="ruota_a_sinistra">Ruota a sinistra</string>

    <string name="ritaglia">Ritaglia</string>
    <string name="ruota_a_destra">Ruota a destra</string>
    <string name="immagine_in_fase_pre_caricamento">Immagine in fase pre-caricamento</string>
    <string name="title_activity_preonota_una_partita2">PreonotaUnaPartita2Activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="title_activity_prenota_una_partita3">PrenotaUnaPartita3</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="data"> Data</string>
    <string name="eliminaPrenotazione">Elimina Prenotazione</string>


</resources>