<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/rotating_clock"
        android:icon="@drawable/ic_rotate_not_clock"
        android:title="@string/ruota_a_sinistra" />
    <item
        android:id="@+id/confirm"
        android:icon="@drawable/ic_confirmrotate"
        android:title="@string/conferma" />
    <item
        android:id="@+id/crop"
        android:icon="@drawable/ic_crop"
        android:title="@string/ritaglia"/>
    <item
        android:id="@+id/delete"
        android:icon="@drawable/ic_deleterotate"
        android:title="@string/Back" />
    <item
        android:id="@+id/rotating_not_clock"
        android:icon="@drawable/ic_rotate_clock"
        android:title="@string/ruota_a_destra" />

</menu>