<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.padelmarcheofficial.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_prenotazioni"
        android:name="com.example.padelmarcheofficial.ui.prenotazioni.PrenotazioniFragment"
        android:label="@string/title_prenotazioni"
        tools:layout="@layout/fragment_prenotazioni" />

    <fragment
        android:id="@+id/navigation_amici"
        android:name="com.example.padelmarcheofficial.ui.amici.AmiciFragment"
        android:label="@string/title_amici"
        tools:layout="@layout/fragment_amici" />
</navigation>