<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="account"
            type="com.example.padelmarcheofficial.dataclass.Account" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegisterActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="-84dp"
            tools:layout_editor_absoluteY="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView6"
                    style="@style/Widget.AppCompat.TextView.SpinnerItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/app_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textStyle="bold" />

                <com.google.android.material.circularreveal.cardview.CircularRevealCardView
                    android:layout_width="114dp"
                    android:layout_height="114dp"
                    app:cardCornerRadius="60dp"
                    app:rippleColor="@color/yellow"
                    app:strokeColor="@color/yellow"
                    app:strokeWidth="3dp">

                    <com.google.android.material.circularreveal.cardview.CircularRevealCardView
                        android:id="@+id/imgAccountcontainer"
                        android:layout_width="108dp"
                        android:layout_height="108dp"
                        android:layout_marginStart="3dp"
                        android:layout_marginTop="3dp"
                        app:cardCornerRadius="60dp"
                        app:rippleColor="@color/yellow"
                        app:strokeColor="@color/white"
                        app:strokeWidth="3dp">

                        <ImageView
                            android:id="@+id/imgAccount"
                            android:layout_width="108dp"
                            android:layout_height="108dp"
                            android:contentDescription="@string/DescriptionFoto"
                            tools:srcCompat="@drawable/ic_baseline_account_circle_24" />
                    </com.google.android.material.circularreveal.cardview.CircularRevealCardView>
                </com.google.android.material.circularreveal.cardview.CircularRevealCardView>

                <TextView
                    android:id="@+id/myImageViewText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:gravity="center"
                    android:text="Clicca sull'avatar \nper cambiare \nimmagine profilo"
                    android:textSize="12sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textFieldname"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:selectAllOnFocus="true"
                        android:text="@{account.nome.toString()}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textFieldsurname"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/surname">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/surname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:selectAllOnFocus="true"
                        android:text="@{account.cognome.toString()}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textFieldusername"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:selectAllOnFocus="true"
                        android:text="@{account.email.toString()}"
                        app:errorEnabled="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textFieldpassword"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/prompt_password"
                    app:endIconMode="password_toggle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:selectAllOnFocus="true"
                        android:text="@{account.psw.toString()}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textFieldeditTextDate"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/birthday"
                    app:helperText="@string/dataformat"
                    app:helperTextEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="date"
                        android:selectAllOnFocus="true"
                        android:text="@{account.compleanno.toString()}" />
                </com.google.android.material.textfield.TextInputLayout>



                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textFieldphone"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/phone">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:selectAllOnFocus="true"
                        android:text="@{account.email.toString()}"
                        app:errorEnabled="true" />
                </com.google.android.material.textfield.TextInputLayout>




                <androidx.cardview.widget.CardView
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <Spinner
                        android:id="@+id/spinnerSesso"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/yellow"
                        android:prompt="@string/spinnerS"
                        android:spinnerMode="dialog" />
                </androidx.cardview.widget.CardView>


                <Button
                    android:id="@+id/button"
                    style="@style/PersonalizedButton"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/registrati" />

                <Button
                    android:id="@+id/btnBack"
                    style="@style/PersonalizedButton"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/Back" />
            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>