<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="account"
            type="com.example.padelmarcheofficial.dataclass.Account"/>
    </data>
<androidx.constraintlayout.widget.ConstraintLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfiloActivity" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="10dp"
        android:background="?attr/colorOnSecondary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

    <com.google.android.material.circularreveal.cardview.CircularRevealCardView
        android:id="@+id/externalcardview"
        android:layout_width="114dp"
        android:layout_height="114dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="60dp"
        app:rippleColor="@color/LightRed"
        app:strokeColor="@color/white"
        app:strokeWidth="3dp">
        <com.google.android.material.circularreveal.cardview.CircularRevealCardView
            android:id="@+id/imgAccountcontainer"
            android:layout_width="108dp"
            android:layout_height="108dp"
            android:layout_marginStart="3dp"
            android:layout_marginTop="3dp"
            app:cardCornerRadius="60dp"
            app:rippleColor="@color/LightRed"
            app:strokeColor="@color/white"
            app:strokeWidth="3dp">
            <ImageView
                android:id="@+id/imgAccount"
                android:layout_width="108dp"
                android:layout_height="108dp"
                android:clickable="false"
                android:contentDescription="@string/DescriptionFoto"
                tools:srcCompat="@drawable/ic_baseline_account_circle_24"
                android:scaleType="centerCrop"/>
        </com.google.android.material.circularreveal.cardview.CircularRevealCardView>
    </com.google.android.material.circularreveal.cardview.CircularRevealCardView>

    <TextView
        android:id="@+id/myImageViewText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:gravity="center"
        android:text="@string/changePhoto"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="12sp" />

    <Button
        android:id="@+id/btnCancImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:autofillHints="@string/nome"
        android:selectAllOnFocus="true"
        android:text="@string/eliminafoto"
        style="@style/PersonalizedButton"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/nameNonModificabile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        style="@style/Base.CardView">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="?attr/colorOnPrimary">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:layout_marginTop="4dp"
                android:text="Nome"
                android:textColor="@color/red"
                tools:ignore="RtlSymmetry" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="5dp"
                android:textSize="@dimen/Bigtextsize"
                android:text="@{account.nome.toString()}"
                tools:ignore="RtlSymmetry"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@color/DarkRed"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/CardNameModificabile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/nome"
        android:background="?attr/colorOnPrimary"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameModificabile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{account.nome.toString()}"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/surnameNonModificabile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        style="@style/Base.CardView">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="?attr/colorOnPrimary">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:layout_marginTop="4dp"
                android:text="@string/cognome"
                android:textColor="@color/red"
                tools:ignore="RtlSymmetry" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="5dp"
                android:textSize="@dimen/Bigtextsize"
                android:text="@{account.cognome.toString()}"
                tools:ignore="RtlSymmetry" />
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@color/DarkRed"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/CardSurnameModificabile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/cognome"
        android:background="?attr/colorOnPrimary"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/surnameModificabile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{account.cognome.toString()}"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        style="@style/Base.CardView">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="?attr/colorOnPrimary">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:layout_marginTop="4dp"
                android:text="@string/email"
                android:textColor="@color/red"
                tools:ignore="RtlSymmetry" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="5dp"
                android:textSize="@dimen/Bigtextsize"
                android:text="@{account.email.toString()}"
                tools:ignore="RtlSymmetry" />
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@color/DarkRed"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

 <!--   <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        style="@style/Base.CardView">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="?attr/colorOnPrimary">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:layout_marginTop="4dp"
                android:text="@string/matricola"
                android:textColor="@color/red"
                tools:ignore="RtlSymmetry" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="5dp"
                android:textSize="@dimen/Bigtextsize"
                android:text="@{account.matricola.toString()}"
                tools:ignore="RtlSymmetry" />
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@color/DarkRed"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView> -->

    <androidx.cardview.widget.CardView
        android:id="@+id/editTextDateNonModificabile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        style="@style/Base.CardView">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="?attr/colorOnPrimary">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:layout_marginTop="4dp"
                android:text="@string/compleanno"
                android:textColor="@color/red"
                tools:ignore="RtlSymmetry" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="5dp"
                android:text="@{account.compleanno.toString()}"
                android:textSize="@dimen/Bigtextsize"
                tools:ignore="RtlSymmetry" />
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@color/DarkRed"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/CardEditTextDateModificabile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/compleanno"
        app:helperTextEnabled="true"
        app:helperText="@string/dataformat"
        android:background="?attr/colorOnPrimary"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextDateModificabile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{account.compleanno.toString()}"
            android:inputType="date"
            android:selectAllOnFocus="true"/>
    </com.google.android.material.textfield.TextInputLayout>

  <!--  <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        style="@style/Base.CardView">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="?attr/colorOnPrimary">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:layout_marginTop="4dp"
                android:text="@string/course"
                android:textColor="@color/red"
                tools:ignore="RtlSymmetry" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="5dp"
                android:textSize="@dimen/Bigtextsize"
                android:text="@{account.idCorso.toString()}"
                tools:ignore="RtlSymmetry" />
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@color/DarkRed"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView> -->

  <!--  <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        style="@style/Base.CardView">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="?attr/colorOnPrimary">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:layout_marginTop="4dp"
                android:text="@string/classe"
                android:textColor="@color/red"
                tools:ignore="RtlSymmetry" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="5dp"
                android:textSize="@dimen/Bigtextsize"
                android:text="@{account.idClasse.toString()}"
                tools:ignore="RtlSymmetry" />
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@color/DarkRed"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView> -->

    <LinearLayout
        android:id="@+id/layoutBtn1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:alpha="2"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnModifica"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:text="@string/modifica"
            style="@style/PersonalizedButton"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutBtn2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="0dp"
        android:alpha="2"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="5">

        <Button
            android:id="@+id/btnSalvataggio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:enabled="false"
            android:text="@string/salva"
            style="@style/PersonalizedButton"/>

        <Button
            android:id="@+id/btnIndietro"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_weight="2"
            android:enabled="false"
            android:text="@string/Back"
            style="@style/PersonalizedButton"/>

    </LinearLayout>

    </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>